--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,198 +5,201 @@
 @tailwind utilities;
 
 @layer base {
-    body {
-        @apply relative z-1 bg-whiten font-satoshi text-base font-normal text-body;
-    }
+  body {
+    @apply relative z-1 bg-whiten font-satoshi text-base font-normal text-body;
+  }
   :root {
-        --background: 0 0% 100%;
-        --foreground: 0 0% 3.9%;
-        --card: 0 0% 100%;
-        --card-foreground: 0 0% 3.9%;
-        --popover: 0 0% 100%;
-        --popover-foreground: 0 0% 3.9%;
-        --primary: 0 0% 9%;
-        --primary-foreground: 0 0% 98%;
-        --secondary: 0 0% 96.1%;
-        --secondary-foreground: 0 0% 9%;
-        --muted: 0 0% 96.1%;
-        --muted-foreground: 0 0% 45.1%;
-        --accent: 0 0% 96.1%;
-        --accent-foreground: 0 0% 9%;
-        --destructive: 0 84.2% 60.2%;
-        --destructive-foreground: 0 0% 98%;
-        --border: 0 0% 89.8%;
-        --input: 0 0% 89.8%;
-        --ring: 0 0% 3.9%;
-        --chart-1: 12 76% 61%;
-        --chart-2: 173 58% 39%;
-        --chart-3: 197 37% 24%;
-        --chart-4: 43 74% 66%;
-        --chart-5: 27 87% 67%;
-        --radius: 0.5rem;
-    }
+    --background: 0 0% 100%;
+    --foreground: 222.2 84% 4.9%;
+    --card: 0 0% 100%;
+    --card-foreground: 222.2 84% 4.9%;
+    --popover: 0 0% 100%;
+    --popover-foreground: 222.2 84% 4.9%;
+    --primary: #264653;
+    --primary-foreground: 210 40% 98%;
+    --secondary: #2a9d8f;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+    --accent: 210 40% 96.1%;
+    --accent-foreground: 222.2 47.4% 11.2%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: 222.2 84% 4.9%;
+    --radius: 0.5rem;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+  }
+
   .dark {
-        --background: 0 0% 3.9%;
-        --foreground: 0 0% 98%;
-        --card: 0 0% 3.9%;
-        --card-foreground: 0 0% 98%;
-        --popover: 0 0% 3.9%;
-        --popover-foreground: 0 0% 98%;
-        --primary: 0 0% 98%;
-        --primary-foreground: 0 0% 9%;
-        --secondary: 0 0% 14.9%;
-        --secondary-foreground: 0 0% 98%;
-        --muted: 0 0% 14.9%;
-        --muted-foreground: 0 0% 63.9%;
-        --accent: 0 0% 14.9%;
-        --accent-foreground: 0 0% 98%;
-        --destructive: 0 62.8% 30.6%;
-        --destructive-foreground: 0 0% 98%;
-        --border: 0 0% 14.9%;
-        --input: 0 0% 14.9%;
-        --ring: 0 0% 83.1%;
-        --chart-1: 220 70% 50%;
-        --chart-2: 160 60% 45%;
-        --chart-3: 30 80% 55%;
-        --chart-4: 280 65% 60%;
-        --chart-5: 340 75% 55%;
-    }
+    --background: 222.2 84% 4.9%;
+    --foreground: 210 40% 98%;
+    --card: 222.2 84% 4.9%;
+    --card-foreground: 210 40% 98%;
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
+    --primary: #264653;
+    --primary-foreground: white;
+    --secondary: #2a9d8f;
+    --secondary-foreground: 210 40% 98%;
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: 210 40% 98%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 210 40% 98%;
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+  }
 }
 
 @layer components {
 }
 
 @layer utilities {
-    /* Chrome, Safari and Opera */
-    .no-scrollbar::-webkit-scrollbar {
-        display: none;
-    }
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 
-    .no-scrollbar {
-        -ms-overflow-style: none; /* IE and Edge */
-        scrollbar-width: none; /* Firefox */
-    }
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 
-    .chat-height {
-        @apply h-[calc(100vh_-_8.125rem)] lg:h-[calc(100vh_-_5.625rem)];
-    }
+  .chat-height {
+    @apply lg:h-[calc(100vh_-_5.625rem)] h-[calc(100vh_-_8.125rem)];
+  }
 
-    .inbox-height {
-        @apply h-[calc(100vh_-_8.125rem)] lg:h-[calc(100vh_-_5.625rem)];
-    }
+  .inbox-height {
+    @apply lg:h-[calc(100vh_-_5.625rem)] h-[calc(100vh_-_8.125rem)];
+  }
 }
 
 /* third-party libraries CSS */
 
 .tableCheckbox:checked ~ div span {
-    @apply opacity-100;
+  @apply opacity-100;
 }
 
 .tableCheckbox:checked ~ div {
-    @apply border-primary bg-primary;
+  @apply border-primary bg-primary;
 }
 
 .apexcharts-legend-text {
-    @apply !text-body dark:!text-bodydark;
+  @apply !text-body dark:!text-bodydark;
 }
 
 .apexcharts-text {
-    @apply !fill-body dark:!fill-bodydark;
+  @apply !fill-body dark:!fill-bodydark;
 }
 
 .apexcharts-xcrosshairs {
-    @apply !fill-stroke dark:!fill-strokedark;
+  @apply !fill-stroke dark:!fill-strokedark;
 }
 
 .apexcharts-gridline {
-    @apply !stroke-stroke dark:!stroke-strokedark;
+  @apply !stroke-stroke dark:!stroke-strokedark;
 }
 
 .apexcharts-series.apexcharts-pie-series path {
-    @apply dark:!stroke-transparent;
+  @apply dark:!stroke-transparent;
 }
 
 .apexcharts-legend-series {
-    @apply !inline-flex gap-1.5;
+  @apply !inline-flex gap-1.5;
 }
 
 .apexcharts-tooltip.apexcharts-theme-light {
-    @apply dark:!border-strokedark dark:!bg-boxdark;
+  @apply dark:!border-strokedark dark:!bg-boxdark;
 }
 
 .apexcharts-tooltip.apexcharts-theme-light .apexcharts-tooltip-title {
-    @apply dark:!border-strokedark dark:!bg-meta-4;
+  @apply dark:!border-strokedark dark:!bg-meta-4;
 }
 
 .apexcharts-xaxistooltip,
 .apexcharts-yaxistooltip {
-    @apply dark:!border-meta-4 dark:!bg-meta-4 dark:!text-bodydark1;
+  @apply dark:!border-meta-4 dark:!bg-meta-4 dark:!text-bodydark1;
 }
 
 .apexcharts-xaxistooltip-bottom:after {
-    @apply !border-b-gray dark:!border-b-meta-4;
+  @apply !border-b-gray dark:!border-b-meta-4;
 }
 
 .apexcharts-xaxistooltip-bottom:before {
-    @apply !border-b-gray dark:!border-b-meta-4;
+  @apply !border-b-gray dark:!border-b-meta-4;
 }
 
 .apexcharts-xaxistooltip-bottom {
-    @apply !rounded !border-none !bg-gray !text-xs !font-medium !text-black dark:!text-white;
+  @apply !rounded !border-none !bg-gray !text-xs !font-medium !text-black dark:!text-white;
 }
 
 .apexcharts-tooltip-series-group {
-    @apply !pl-1.5;
+  @apply !pl-1.5;
 }
 
 .flatpickr-wrapper {
-    @apply w-full;
+  @apply w-full;
 }
 
 .flatpickr-months .flatpickr-prev-month:hover svg,
 .flatpickr-months .flatpickr-next-month:hover svg {
-    @apply !fill-primary;
+  @apply !fill-primary;
 }
 
 .flatpickr-calendar.arrowTop:before {
-    @apply dark:!border-b-boxdark;
+  @apply dark:!border-b-boxdark;
 }
 
 .flatpickr-calendar.arrowTop:after {
-    @apply dark:!border-b-boxdark;
+  @apply dark:!border-b-boxdark;
 }
 
 .flatpickr-calendar {
-    @apply !p-6 dark:!bg-boxdark dark:!text-bodydark dark:!shadow-8 2xsm:!w-auto;
+  @apply !p-6 dark:!bg-boxdark dark:!text-bodydark dark:!shadow-8 2xsm:!w-auto;
 }
 
 .flatpickr-day {
-    @apply dark:!text-bodydark dark:hover:!border-meta-4 dark:hover:!bg-meta-4;
+  @apply dark:!text-bodydark dark:hover:!border-meta-4 dark:hover:!bg-meta-4;
 }
 
 .flatpickr-months .flatpickr-prev-month,
 .flatpickr-months .flatpickr-next-month {
-    @apply !top-7 dark:!fill-white dark:!text-white;
+  @apply !top-7 dark:!fill-white dark:!text-white;
 }
 
 .flatpickr-months .flatpickr-prev-month.flatpickr-prev-month,
 .flatpickr-months .flatpickr-next-month.flatpickr-prev-month {
-    @apply !left-7;
+  @apply !left-7;
 }
 
 .flatpickr-months .flatpickr-prev-month.flatpickr-next-month,
 .flatpickr-months .flatpickr-next-month.flatpickr-next-month {
-    @apply !right-7;
+  @apply !right-7;
 }
 
 span.flatpickr-weekday,
 .flatpickr-months .flatpickr-month {
-    @apply dark:!fill-white dark:!text-white;
+  @apply dark:!fill-white dark:!text-white;
 }
 
 .flatpickr-day.inRange {
-    box-shadow: -5px 0 0 #f3f4f6, 5px 0 0 #f3f4f6 !important;
-    @apply dark:!shadow-7;
+  box-shadow:
+    -5px 0 0 #f3f4f6,
+    5px 0 0 #f3f4f6 !important;
+  @apply dark:!shadow-7;
 }
 
 .flatpickr-day.inRange,
@@ -211,14 +214,14 @@ span.flatpickr-weekday,
 .flatpickr-day:focus,
 .flatpickr-day.prevMonthDay:focus,
 .flatpickr-day.nextMonthDay:focus {
-    @apply !border-[#F3F4F6] !bg-[#F3F4F6] dark:!border-meta-4 dark:!bg-meta-4;
+  @apply !border-[#F3F4F6] !bg-[#F3F4F6] dark:!border-meta-4 dark:!bg-meta-4;
 }
 
 .flatpickr-day.selected,
 .flatpickr-day.startRange,
 .flatpickr-day.selected,
 .flatpickr-day.endRange {
-    @apply dark:!text-white;
+  @apply dark:!text-white;
 }
 
 .flatpickr-day.selected,
@@ -239,67 +242,67 @@ span.flatpickr-weekday,
 .flatpickr-day.selected.nextMonthDay,
 .flatpickr-day.startRange.nextMonthDay,
 .flatpickr-day.endRange.nextMonthDay {
-    background: #3c50e0;
-    @apply !border-primary !bg-primary hover:!border-primary hover:!bg-primary;
+  background: #3c50e0;
+  @apply !border-primary !bg-primary hover:!border-primary hover:!bg-primary;
 }
 
 .flatpickr-day.selected.startRange + .endRange:not(:nth-child(7n + 1)),
 .flatpickr-day.startRange.startRange + .endRange:not(:nth-child(7n + 1)),
 .flatpickr-day.endRange.startRange + .endRange:not(:nth-child(7n + 1)) {
-    box-shadow: -10px 0 0 #3c50e0;
+  box-shadow: -10px 0 0 #3c50e0;
 }
 
 .map-btn .jvm-zoom-btn {
-    @apply flex h-7.5 w-7.5 items-center justify-center rounded border border-stroke bg-white px-0 pb-0.5 pt-0 text-2xl leading-none text-body hover:border-primary hover:bg-primary hover:text-white dark:border-strokedark dark:bg-meta-4 dark:text-bodydark dark:hover:border-primary dark:hover:bg-primary dark:hover:text-white;
+  @apply flex h-7.5 w-7.5 items-center justify-center rounded border border-stroke bg-white px-0 pb-0.5 pt-0 text-2xl leading-none text-body hover:border-primary hover:bg-primary hover:text-white dark:border-strokedark dark:bg-meta-4 dark:text-bodydark dark:hover:border-primary dark:hover:bg-primary dark:hover:text-white;
 }
 
 .mapOne .jvm-zoom-btn {
-    @apply !bottom-0 !left-auto !top-auto;
+  @apply !bottom-0 !left-auto !top-auto;
 }
 
 .mapOne .jvm-zoom-btn.jvm-zoomin {
-    @apply !right-10;
+  @apply !right-10;
 }
 
 .mapOne .jvm-zoom-btn.jvm-zoomout {
-    @apply !right-0;
+  @apply !right-0;
 }
 
 .taskCheckbox:checked ~ .box span {
-    @apply opacity-100;
+  @apply opacity-100;
 }
 
 .taskCheckbox:checked ~ p {
-    @apply line-through;
+  @apply line-through;
 }
 
 .taskCheckbox:checked ~ .box {
-    @apply border-primary bg-primary dark:border-primary;
+  @apply border-primary bg-primary dark:border-primary;
 }
 
 .custom-input-date::-webkit-calendar-picker-indicator {
-    background: transparent;
+  background: transparent;
 }
 
 input[type="search"]::-webkit-search-cancel-button {
-    @apply appearance-none;
+  @apply appearance-none;
 }
 
 .custom-input-date::-webkit-calendar-picker-indicator {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 20px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 20px;
 }
 
 [x-cloak] {
-    display: none !important;
+  display: none !important;
 }
 
 @layer base {
   * {
     @apply border-border;
-    }
+  }
   body {
     @apply bg-background text-foreground;
-    }
+  }
 }
